--- a/index.html
+++ b/index.html
@@ -57,5 +57,9 @@
       </section>
     </main>
   </div>
+
+  <footer>
+    Feito com <img src="assets/heart.svg" alt="Coracao"> pela Rocketseat
+  </footer>
 </body>
 </html>
